--- a/AdminPrescripto/package.json
+++ b/AdminPrescripto/package.json
@@ -4,12 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "postinstall": "",
+   "postinstall": "chmod +x node_modules/.bin/vite",
   "dev": "vite",
   "build": "vite build",
   "start": "vite preview"
-},
-
+  },
   "dependencies": {
     "axios": "^1.7.9",
     "react": "^18.3.1",
@@ -30,6 +29,6 @@
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.3"
+    "vite": "^6.1.0"
   }
 }
